src/test/deca/syntax/parser/valid/if_without_inst.deca
// Test parser, if sans instruction

{
    if (true) {
    }
}