src/test/deca/syntax/parser/invalid/inst_expr_print_symbole_mod.deca
// Test de parser, les parenthèses du print ne sont pas fermées

{
    print(%) ;
}